<resources>
    <string name="app_name">FireChat</string>
    <string name="no_internet">Check Internet Connection</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_chat_list">Chat list will apear here</string>
    <string name="empty_friends_list">Friends list will apear here</string>
    <string name="empty_requests_list">Friend requests will apear here</string>
    <string name="press_back_to_exit">Press back again to exit</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="failed_to_fetch_friends">Failed to fetch friends : %1$s</string>
    <string name="request_sent_successfully">Request sent successfully</string>
    <string name="failed_to_send_reqeust">Failed to send friend request : %1$s</string>
    <string name="request_cancelled_successfully">Request Cancelled Successfully</string>
    <string name="failed_to_cancel_reqeust">Failed to cancel request : %1$s</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="failed_to_fetch_friend_requests">Failed to fetch friend requests %1$s</string>
    <string name="failed_to_deny_request">Failed to deny request : %1$s</string>
    <string name="denied">Denied</string>
    <string name="request_denied_successfully">Request Denied Successfully</string>
    <string name="failed_to_accept_request">Failed to accept request : %1$s</string>
    <string name="failed_to_fetch_chat_list">Failed to fetch chat list : %1$s</string>
    <string name="enter_message">Enter Message</string>
    <string name="failed_to_send_message">Failed to send Message : %1$s</string>
    <string name="message_sent_successfully">Message sent successfully</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="video">Video</string>
    <string name="upload_progress">Uploading %1$s (%2$s %%)</string>
    <string name="download_progress">Downloading %1$s (%2$s %%)</string>
    <string name="failed_to_upload">Failed to upload : %1$s</string>
    <string name="forward">Forward</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="failed_to_delete_message">Failed to delete message : %1$s</string>
    <string name="message_deleted_successfully">Message deleted successfully</string>
    <string name="failed_to_delete_file">Failed to delete file %1$s</string>
    <string name="failed_to_store_file">Failed to store file</string>
    <string name="file_downloaded_successfully">File Downloaded Successfully</string>
    <string name="view">View</string>
    <string name="failed_to_download">Failed to download file : %1$s</string>
    <string name="share_with">Share with..</string>
    <string name="failed_to_fetch_friend_list">Failed to fetch friends list : %1$s</string>
    <string name="failed_to_save_device_token">Failed to save device token : $1%s</string>
    <string name="failed_to_send_notification">Failed to send notification : %1$s</string>
    <string name="something_went_wrong">Something went wrong : %s</string>
    <string name="cancel">Cancel</string>
    <string name="reject">Reject</string>
    <string name="location_request">Location request</string>
    <string name="location_request_sent">Location request sent</string>
    <string name="_10">10</string>
    <string name="chat_not_created">Chat not created</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAXYZlp1wnB7v5VzyHvfMwbYB_eolUDHfE</string>
</resources>